# ChangeLog for media-sound/audacious
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/audacious/ChangeLog,v 1.230 2011/04/29 17:46:10 xarthisius Exp $

  29 Apr 2011; Kacper Kowalik <xarthisius@gentoo.org> audacious-2.4.4.ebuild:
  ppc stable wrt #361267

  29 Apr 2011; Samuli Suominen <ssuominen@gentoo.org> audacious-2.4.4.ebuild:
  ppc64 stable wrt #361267

  23 Apr 2011; Raúl Porcel <armin76@gentoo.org> audacious-2.4.4.ebuild:
  alpha/sparc/x86 stable wrt #361267

*audacious-2.5.0 (16 Apr 2011)

  16 Apr 2011; Tony Vroon <chainsaw@gentoo.org> -audacious-2.2.ebuild,
  -audacious-2.4.1.ebuild, -audacious-2.4.2.ebuild, -audacious-2.4.3.ebuild,
  -audacious-2.5_alpha1.ebuild, +audacious-2.5.0.ebuild:
  First release on the 2.5 branch; no longer masked. Add dependency on libguess
  as suggested by Mathieu Zhang in bug #335461. Remove old ebuilds.

  11 Apr 2011; Jeroen Roovers <jer@gentoo.org> audacious-2.4.4.ebuild:
  Stable for HPPA (bug #361267).

  30 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> audacious-2.4.4.ebuild:
  amd64 stable wrt #361267

  25 Mar 2011; Kacper Kowalik <xarthisius@gentoo.org> audacious-2.4.0.ebuild:
  ppc stable wrt #297894

  24 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> audacious-2.2.ebuild,
  audacious-2.4.0.ebuild, audacious-2.4.1.ebuild, audacious-2.4.2.ebuild,
  audacious-2.4.3.ebuild, audacious-2.4.4.ebuild, audacious-2.5_alpha1.ebuild:
  Use SLOT dependencies for x11-libs/gtk+.

*audacious-2.4.4 (28 Feb 2011)

  28 Feb 2011; Tony Vroon <chainsaw@gentoo.org> +audacious-2.4.4.ebuild:
  Version bump. Use emake like on 2.5-alpha ebuild.

*audacious-2.5_alpha1 (30 Jan 2011)

  30 Jan 2011; Tony Vroon <chainsaw@gentoo.org> +audacious-2.5_alpha1.ebuild:
  This is to become 2.5 with time. Masked for your protection. If you unmask &
  use this, note that bugs go upstream at http://jira.atheme.org/ for the