@@ -1,4 +1,4 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: /var/cvsroot/gentoo-x86/media-sound/audacious/audacious-2.5.0.ebuild,v 1.1 2011/04/16 20:37:02 chainsaw Exp $
 
@@ -15,7 +15,7 @@ EHG_REPO_URI="http://hg.atheme.org/audacious"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~hppa ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd ~x86-freebsd ~x86-interix ~amd64-linux ~x86-linux"
+KEYWORDS=""
 IUSE="altivec chardet nls session sse2"
 
 RDEPEND=">=dev-libs/dbus-glib-0.60
@@ -29,14 +29,13 @@ RDEPEND=">=dev-libs/dbus-glib-0.60
 	session? ( x11-libs/libSM )"
 
 DEPEND="${RDEPEND}
-	>=dev-util/pkgconfig-0.9.0
+	virtual/pkgconfig
 	chardet? ( app-i18n/libguess )
 	nls? ( dev-util/intltool )"
 
 PDEPEND=">=media-plugins/audacious-plugins-2.5.0"
 
 src_prepare() {
-	cd "${S}"
 	./autogen.sh
 }
 
