@@ -1,6 +1,11 @@
 # ChangeLog for media-sound/audacious
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-sound/audacious/ChangeLog,v 1.230 2011/04/29 17:46:10 xarthisius Exp $
+
+  10 Oct 2013; Andrew John Hughes <gnu_andrew@member.fsf.org>
+  audacious-9999.ebuild:
+  Drop keywords for live ebuild & redundant cd ${S}.  Use virtual/pkgconfig and
+  updated copyright.
 
   29 Apr 2011; Kacper Kowalik <xarthisius@gentoo.org> audacious-2.4.4.ebuild:
   ppc stable wrt #361267
@@ -1073,4 +1078,3 @@
   If you submit a bug about that, include a patch to enable compilation and
   include a test track. A bug report that misses either of these will be
   closed.
-
